--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/styled": "^11.11.5",
     "@heroicons/react": "^2.1.1",
+    "@mui/icons-material": "^5.15.14",
     "@mui/joy": "^5.0.0-beta.32",
-    "@mui/material": "^5.15.11",
+    "@mui/material": "^5.15.14",
     "@react-google-maps/api": "^2.19.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
